--- a/aswin.html
+++ b/aswin.html
@@ -55,7 +55,7 @@
                     </nav>
                 </div>
                 <div class="header_btns">
-                    <a href="#" type="button" class="btn blank_btn ">Login </a>
+                    <a href="#" type="button" class="btn blank_btn top ">Login </a>
                     <button type="button" class="btn filled_btn top">Join Us</button>
                 </div>
             </div>
