--- a/aswin.html
+++ b/aswin.html
@@ -70,7 +70,7 @@
                     <p>Our goal is to make online education work for everyone</p>
                     <div class="brand_btns">
                         <button type="button" class="btn filled_btn">Join Us</button>
-                        <!-- <a href="#" type="button" class="btn border_btn">Learn more</a> -->
+                        <a href="#" type="button" class="btn border_btn">Learn more</a>
                     </div>
                 </div>
                 <div class="brand_img">
