--- a/aswin.html
+++ b/aswin.html
@@ -83,7 +83,7 @@
         <div class="container">
             <div class="intro">
                 <div class="intro title">
-                    <h2>Approdable Packages</h2>
+                    <!-- <h2>Approdable Packages</h2> -->
                     <p>Problems trying to resolve the conflict between
                         the two major realms of Classical physics:
                         Newtonian mechanics </p>
