--- a/aswin.html
+++ b/aswin.html
@@ -69,7 +69,7 @@
                     <h1>Best Learning Opportunities</h1>
                     <p>Our goal is to make online education work for everyone</p>
                     <div class="brand_btns">
-                        <!-- <button type="button" class="btn filled_btn">Join Us</button> -->
+                        <button type="button" class="btn filled_btn">Join Us</button>
                         <a href="#" type="button" class="btn border_btn">Learn more</a>
                     </div>
                 </div>
