--- a/aswin.html
+++ b/aswin.html
@@ -27,12 +27,13 @@
                     <nav class="site_nav">
                         <ul>
                             <li><a href="#">Home</a></li>
-                            <li class="Product"><input type="checkbox" id="Product_dropdown">
-                                <a href="#"><label for="Product_dropdown">Product</label></a>
+                            <li><input type="checkbox" id="Product_dropdown">
+                                <a href="#" class="Product"><label for="Product_dropdown">Product</label></a>
                                 <nav class="dropdown">
                                     <ul>
-                                        <li class="open"><input type="checkbox" id="open_dropdown">
-                                            <a href="#"><label for="open_dropdown">open</label></a>
+                                        <li>
+                                            <input type="checkbox" id="open_dropdown">
+                                            <a href="#" class="open"><label for="open_dropdown">open</label></a>
                                             <div class="sec_dropdown">
                                                 <ul>
                                                     <li><a href="#">File 1</a></li>
@@ -42,7 +43,7 @@
                                                 </ul>
                                             </div>
                                         </li>
-                                        <li><a href="#">Scrvice</a></li>
+                                        <li><a href="#">Service</a></li>
                                         <li><a href="#">File</a></li>
                                         <li><a href="#">Save</a></li>
                                     </ul>
