--- a/intex.html
+++ b/intex.html
@@ -36,7 +36,7 @@
                                             <a href="#" class="open"><label for="open_dropdown">open</label></a>
                                             <div class="sec_dropdown">
                                                 <ul>
-                                                    <li><a href="#">File 1</a></li>
+                                                    <!-- <li><a href="#">File 1</a></li> -->
                                                     <li><a href="#">File 2</a></li>
                                                     <li><a href="#">File 3</a></li>
                                                     <li><a href="#">File 4</a></li>
