--- a/intex.html
+++ b/intex.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="responsive.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet"
@@ -10,9 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" <meta
         charset="UTF-8">
-    <link rel="stylesheet" href="project.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing page</title>
+    <link rel="stylesheet" href="project.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
                                             <a href="#" class="open"><label for="open_dropdown">open</label></a>
                                             <div class="sec_dropdown">
                                                 <ul>
-                                                    <!-- <li><a href="#">File 1</a></li> -->
+                                                    <li><a href="#">File 1</a></li>
                                                     <li><a href="#">File 2</a></li>
                                                     <li><a href="#">File 3</a></li>
                                                     <li><a href="#">File 4</a></li>
@@ -84,7 +84,7 @@
         <div class="container">
             <div class="intro">
                 <div class="intro title">
-                    <!-- <h2>Approdable Packages</h2> -->
+                    <h2>Approdable Packages</h2>
                     <p>Problems trying to resolve the conflict between
                         the two major realms of Classical physics:
                         Newtonian mechanics </p>
