index file name changed

--- a/index.html
+++ b/index.html
@@ -25,30 +25,39 @@
                     <h1>Brandname</h1>
                     <input type="checkbox" id="slid_menu">
                     <nav class="site_nav">
+
                         <ul>
                             <li><a href="#">Home</a></li>
-                            <li><input type="checkbox" id="Product_dropdown">
-                                <a href="#" class="Product"><label for="Product_dropdown">Product</label></a>
-                                <nav class="dropdown">
-                                    <ul>
-                                        <li>
-                                            <input type="checkbox" id="open_dropdown">
-                                            <a href="#" class="open"><label for="open_dropdown">open</label></a>
-                                            <div class="sec_dropdown">
-                                                <ul>
-                                                    <li><a href="#">File 1</a></li>
-                                                    <li><a href="#">File 2</a></li>
-                                                    <li><a href="#">File 3</a></li>
-                                                    <li><a href="#">File 4</a></li>
-                                                </ul>
-                                            </div>
-                                        </li>
-                                        <li><a href="#">Service</a></li>
-                                        <li><a href="#">File</a></li>
-                                        <li><a href="#">Save</a></li>
-                                    </ul>
-                                </nav>
-                            </li>
+
+                            
+                                <li>
+                                    <input type="checkbox" id="Product_dropdown">
+                                    <a href="#" class="Product"><label for="Product_dropdown">Product<span class="material-symbols-outlined">
+                                        arrow_drop_down
+                                        </span></label></a>
+                                    <nav class="dropdown">
+                                        <ul>
+                                            <li>
+                                                <input type="checkbox" id="open_dropdown">
+                                                <a href="#" class="open"><label for="open_dropdown">open<span class="material-symbols-outlined">
+                                                    arrow_drop_down
+                                                    </span></label></a>
+                                                <div class="sec_dropdown">
+                                                    <ul>
+                                                        <li><a href="#">File 1</a></li>
+                                                        <li><a href="#">File 2</a></li>
+                                                        <li><a href="#">File 3</a></li>
+                                                        <li><a href="#">File 4</a></li>
+                                                    </ul>
+                                                </div>
+                                            </li>
+                                            <li><a href="#">Service</a></li>
+                                            <li><a href="#">File</a></li>
+                                            <li><a href="#">Save</a></li>
+                                        </ul>
+                                    </nav>
+                                </li>
+                            
                             <li><a href="#">Pricing</a></li>
                             <li><a href="#">Contact</a></li>
                             <li><a href="#" type="button" class="btn blank_bttn">Login </a></li>
@@ -62,24 +71,23 @@
             </div>
         </div>
     </header>
-    <header>
-        <div class="container">
-            <div class="brand">
-                <div class="brand_text">
-                    <h3>Welcome</h3>
-                    <h1>Best Learning Opportunities</h1>
-                    <p>Our goal is to make online education work for everyone</p>
-                    <div class="brand_btns">
-                        <button type="button" class="btn filled_btn">Join Us</button>
-                        <a href="#" type="button" class="btn border_btn">Learn more</a>
-                    </div>
-                </div>
-                <div class="brand_img">
-                    <img src="hero-cover-1.png" alt="hero-cover-1.png">
+    <div class="container brand">
+        <div class="brand">
+            <div class="brand_text">
+                <h3>Welcome</h3>
+                <h1>Best Learning Opportunities</h1>
+                <p>Our goal is to make online education work for everyone</p>
+                <div class="brand_btns">
+                    <button type="button" class="btn filled_btn">Join Us</button>
+                    <a href="#" type="button" class="btn border_btn">Learn more</a>
                 </div>
             </div>
+            <div class="brand_img">
+                <img src="hero-cover-1.png" alt="hero-cover-1.png">
+            </div>
         </div>
-    </header>
+    </div>
+
     <div class="section">
         <div class="container">
             <div class="intro">
