--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             </div>
         </div>
     </header>
+    <div class="baner_section">
     <div class="container brand">
         <div class="brand">
             <div class="brand_text">
@@ -87,7 +88,7 @@
             </div>
         </div>
     </div>
-
+</div>
     <div class="section">
         <div class="container">
             <div class="intro">
